# androidlib

./: README.md  settings.gradle
EHttpInterceptor/: build.gradle
EHttpInterceptor/src/androidTest/java/com/github/humenger/ehttpinterceptor/: ExampleInstrumentedTest.java
EHttpInterceptor/src/main/: AndroidManifest.xml
EHttpInterceptor/src/main/java/com/github/humenger/ehttpinterceptor/: EHttpInterceptor.java
EHttpInterceptor/src/test/java/com/github/humenger/ehttpinterceptor/: ExampleUnitTest.java
FrpHelper/: build.gradle  proguard-rules.pro
FrpHelper/src/androidTest/java/com/github/humenger/frphelper/: ExampleInstrumentedTest.java
GithubProxyHelpers/: build.gradle
HSystemHelpers/: build.gradle
HSystemHelpers/src/main/: AndroidManifest.xml
Httposed/: build.gradle
Httposed/src/main/: AndroidManifest.xml
LogLite/: build.gradle
MiniBrowser/: build.gradle
MultiDexHook/: build.gradle
NetFileHelpers/: build.gradle
RSharedPreferences/: build.gradle
RSharedPreferences/src/main/: AndroidManifest.xml
XReflectHelpers/: build.gradle
XReflectHelpers/src/main/: AndroidManifest.xml
androidhideapi/: build.gradle
androidhideapi/src/main/java/android/app/: ActivityThread.java  IActivityManager.java
androidhideapi/src/main/java/android/content/: Context.java  IIntentReceiver.java
androidhideapi/src/main/java/android/content/pm/: IPackageInstaller.java  IPackageManager.java  PackageParser.java
androidhideapi/src/main/java/android/content/res/: AssetManager.java  Resources.java
androidhideapi/src/main/java/android/os/: Binder.java  Build.java  INetworkManagementService.java  IServiceCallback.java  IServiceManager.java  Parcelable.java  SELinux.java  ServiceManager.java  ShellCallback.java  ShellCommand.java
androidhideapi/src/main/java/android/system/: Int32Ref.java
androidhideapi/src/main/java/android/view/: IWindowManager.java
androidhideapi/src/main/java/com/android/server/: NetworkManagementService.java  SystemService.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
lsplantapi/: build.gradle
lsplantapi/src/main/cpp/: CMakeLists.txt  LSPlant.cpp
multi-level-listview/: build.gradle
netcuthelper/: build.gradle
unicorn-engine-binding/: build.gradle
unicorn-engine-binding/src/androidTest/java/org/unicorn_engine/binding/: ExampleInstrumentedTest.java
unicorn-engine-binding/src/main/cpp/: CMakeLists.txt  unicorn_Unicorn.c
(+80 files in other folders)
